--- a/build.gradle
+++ b/build.gradle
@@ -12,9 +12,12 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.apache.commons:commons-lang3:3.9'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
+    implementation 'com.squareup.retrofit2:converter-jackson:2.9.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testImplementation 'org.hamcrest:hamcrest:2.2'
 }
 
 test {
