--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,7 @@ plugins {
     id 'java'
 }
 
-version '1.0-SNAPSHOT'
-
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+version '1.0'
 
 repositories {
     mavenCentral()
